crates/goat_linter/src/snapshots/jest_no_restricted_jest_methods.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Use of `fn` is not allowed
   ╭─[no_restricted_jest_methods.tsx:1:6]
 1 │ jest.fn()
   ·      ──
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Use of `fn` is not allowed
   ╭─[no_restricted_jest_methods.tsx:1:6]
 1 │ jest["fn"]()
   ·      ────
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Do not use mocks
   ╭─[no_restricted_jest_methods.tsx:1:6]
 1 │ jest.mock()
   ·      ────
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Do not use mocks
   ╭─[no_restricted_jest_methods.tsx:1:6]
 1 │ jest["mock"]()
   ·      ──────
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Use of `advanceTimersByTime` is not allowed
   ╭─[no_restricted_jest_methods.tsx:3:22]
 2 │                 import { jest } from '@jest/globals';
 3 │                 jest.advanceTimersByTime();
   ·                      ───────────────────
 4 │             
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Use of `fn` is not allowed
   ╭─[no_restricted_jest_methods.tsx:1:4]
 1 │ vi.fn()
   ·    ──
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Do not use mocks
   ╭─[no_restricted_jest_methods.tsx:1:4]
 1 │ vi.mock()
   ·    ────
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Use of `advanceTimersByTime` is not allowed
   ╭─[no_restricted_jest_methods.tsx:3:12]
 2 │                  import { vi } from 'vitest';
 3 │                  vi.advanceTimersByTime();
   ·                     ───────────────────
 4 │                 
   ╰────

  ⚠ eslint-plugin-jest(no-restricted-jest-methods): Use of `fn` is not allowed
   ╭─[no_restricted_jest_methods.tsx:1:4]
 1 │ vi["fn"]()
   ·    ────
   ╰────
