crates/goat_linter/src/snapshots/jest_padding_around_after_all_blocks.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ eslint-plugin-jest(padding-around-after-all-blocks): Missing padding before afterAll block
   ╭─[padding_around_after_all_blocks.tsx:2:1]
 1 │ const thing = 123;
 2 │ afterAll(() => {});
   · ▲
   ╰────
  help: Make sure there is an empty new line before the afterAll block
